Record share event
